# Telegram_STT_bot

./: .gitignore  Dockerfile.api  Dockerfile.bot  README.md  docker-compose.yaml  pyproject.toml
src/api/: file_manager.py  main.py
src/bot/: main.py
src/model/: base_model.py  factory.py  model_manager.py  utils.py  whisper.py
